openshift/openshift-101/03-pod-lifecycle/layer1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: layer1
    version: v1
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer1-v1
  namespace: ocp-101-03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer1
      version: v1
  template:
    metadata:
      labels:
        app: layer1
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: layer1
#        image: quay.io/marrober/layers:28
        image: quay.io/marrober/layers:30
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "30"]
      terminationGracePeriodSeconds: 45
---
apiVersion: v1
kind: Service
metadata:
  name: layer1-v1
  namespace: ocp-101-03
  labels:
    app: layer1   
    version: v1 
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: layer1
    version: v1
